# 3DSO

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark_3dso.ps1  build_3dso.cmd  build_pgo.cmd  python_example.py  run_3dso_from_txt.py
.github/workflows/: ci.yml
data/: BENCHMARK_DATASET.md  sample_plot.txt
docs/: architecture.md  build.md  reliability.md
include/so3d/: cli_args.hpp  csv_writer.hpp  results.hpp  so3d.hpp
include/tdso/: cli_args.hpp  csv_writer.hpp  results.hpp  tdso.hpp
scripts/: build.ps1  compare_fast_path.ps1
src/: cli_args.cpp  csv_writer.cpp  main.cpp  so3d_engine.cpp  tdso_engine.cpp
tests/: README.md  run_regression.ps1
